--- a/.inputrc
+++ b/.inputrc
@@ -30,4 +30,8 @@ Meta-n: history-search-forward
 #for freebsd console
 "\e[H": beginning-of-line
 "\e[F": end-of-line
+
+# Fix bash's utterly moronic defaults for completion by adding these to ~/.inputrc
 set bell-style visible
+set show-all-if-ambiguous on
+set show-all-if-unmodified on
